# mcp-server-uyuni

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  README.md  SECURITY.md  TEST_CASES.md  config.example.gemini.json  config.json  config.json.docker  config.json.example  docker-compose.yml  mcp-config-stdio.example.mcpo-uv.json  mcp-server-uyuni.py  prepare-commit-msg.template.txt  pyproject.toml  server.py  start_mcpo.sh  start_openwebui.sh  uyuni-connection-config-stdio.example.env
.github/: dependabot.yml
.github/workflows/: bandit.yml  docker-publish.yml  grype.yml  lint.yml  obs2gitchecker.yml  release.yml  trivy.yml  unit_tests.yml  update-spec-on-lock-change.yml
deploy/: README.md  stack.env.example
deploy/keycloak/: Dockerfile  gemini-uyuni
deploy/keycloak/import/: uyuni-mcp-realm.json  uyuni-mcp-users-0.json
deploy/nginx-dcr-proxy/: Dockerfile  dcr_sanitize.js  nginx.conf
release/: README_dependency_sync.md  check_pyproject_toml.sh  copy_deps.sh  dependency_sync_check.py  obs2gitea.py  pydeps.py
scripts/: export-keycloak-realm.sh
src/mcp_server_uyuni/: __init__.py  __main__.py  auth.py  config.py  constants.py  errors.py  logging_config.py  server.py  utils.py  uyuni_api.py
src/mcp_server_uyuni/utils/: __init__.py  elicitation.py  misc.py  pagination.py
src/tools/: system.py  systems.py
test/: .gitignore  acceptance_tests.py  test_cases.json  test_cases_act.json  test_cases_grd.json  test_cases_ops.json  test_cases_ops_2.json  test_cases_ops_2.json.bak  test_cases_rbt.json  test_cases_sch.json  test_cases_sec.json  test_cases_sys.json  test_cases_upd.json  test_cases_upd_long.json  test_config.json  test_config.py  test_deepeval.py  test_tools.py
test/results/: test_results_act.v0.5.0.json  test_results_act.v0.5.1.json  test_results_grd.v0.5.0.json  test_results_grd.v0.5.1.json  test_results_ops.v0.5.0.json  test_results_ops.v0.5.1.json  test_results_ops_2.v0.5.0.json  test_results_ops_2.v0.5.1.json  test_results_rbt.v0.5.1.json  test_results_sch.v0.5.0.json  test_results_sch.v0.5.1.json  test_results_sec.v0.5.0.json  test_results_sec.v0.5.1.json  test_results_sys.v0.5.0.json  test_results_sys.v0.5.1.json  test_results_upd.v0.5.0.json  test_results_upd.v0.5.1.json
