[project]
name = "mcp-server-uyuni"
version = "0.5.0"
description = "Model Context Protocol Server for Uyuni Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "authlib==1.6.6",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "click==8.3.1",
    "cryptography==44.0.3",
    "exceptiongroup==1.2.2",
    "fastmcp==2.12.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2024.10.1",
    "lazy-object-proxy==1.10.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mcp==1.15.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "openapi-core==0.19.5",
    "openapi-pydantic==0.5.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "pathable==0.4.4",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyperclip==1.11.0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rfc3339-validator==0.1.4",
    "rich==14.2.0",
    "rich-rst==1.3.1",
    "rpds-py==0.27.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==2.3.6",
    "starlette==0.49.1",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uvicorn==0.34.2",
    "websockets==14.2",
    "werkzeug==3.1.1",
]

[project.scripts]
mcp-server-uyuni = "mcp_server_uyuni:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
# For a flat layout with mcp_server_uyuni.py in the root,
# Hatchling's auto-detection will find it when 'packages' is omitted.
