[project]
name = "mcp-server-uyuni"
version = "0.5.2"
description = "Model Context Protocol Server for Uyuni Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib==1.6.6",
    "certifi==2025.1.31",
    "cryptography==44.0.3",
    "fastmcp==2.14.5",
]

[project.scripts]
mcp-server-uyuni = "mcp_server_uyuni:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "respx>=0.22.0",
]
# For a flat layout with mcp_server_uyuni.py in the root,
# Hatchling's auto-detection will find it when 'packages' is omitted.
